find_package(spdk REQUIRED)
find_package(absl REQUIRED)

add_subdirectory(base)
add_subdirectory(msg)
add_subdirectory(rpc)
add_subdirectory(raft)
add_subdirectory(localstore)
add_subdirectory(osd)
add_subdirectory(monclient)
add_subdirectory(client)
add_subdirectory(bdev)
add_subdirectory(tools)
add_subdirectory(test)
